--- a/index.html
+++ b/index.html
@@ -1,1 +1,40 @@
-<h1> hola </h1>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="cumpleaños.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400&display=swap">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@200&display=swap">
+
+</head>
+<body>
+  <div class="globo-container">
+  </div>
+
+  <div class="globo-container-2">
+  </div>
+
+  <div class="globo-container-3">
+  </div>
+
+    <div class="container">
+      <h2>
+        <span class="libre-baskerville">Feliz cumpleaños</span>
+        <br>
+        <br>
+        IVANA
+      </h2>
+    </div>
+
+      
+
+
+
+  <script src="anime.min.js"></script>
+  <script src="cumple.js"></script>
+  <script src="cumple2.js"></script>
+  <script src="cumple3.js"></script>
+</body>
+</html>
+
