--- a/index.html
+++ b/index.html
@@ -1,40 +1,178 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="cumpleaños.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400&display=swap">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@200&display=swap">
+    <title>Happy Birthday</title>
+    <meta charset="UTF-8"/>
+    <meta name="description" content="Happy Birthday">
+    <meta name="robots" content="index, follow"/>
+    <link rel="author" href="https://plus.google.com/u/1/+AyushSharma1/"/>
+    <meta name="keywords" content="Birthday, Happy">
+    <meta property="og:type" content="E-Greeting"/>
+    <meta property="og:image" content="favicon.ico"/>
+    <meta property="og:description" content="Wish you a very Happy Birthday">
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta http-equiv="X-UA-Compatible" content="IE=9; IE=8; IE=7; IE=EDGE"/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="stylesheet.css?v=0.3">
+    <link rel="stylesheet" type="text/css" href="loading.css">
+    <link href='https://fonts.lug.ustc.edu.cn/css?family=Signika' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet/less" href="./cake.less">
+    <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/2.1.0/less.min.js"></script>
 
+    <style>
+        /*圆角*/
+        .jpg {
+            -webkit-border-radius: calc(100vw / 20) !important;
+            -moz-border-radius: calc(100vw / 20) !important;
+            border-radius: calc(100vw / 20) !important;
+            max-width: calc(100vw / 12) !important;
+        }
+    </style>
 </head>
+
 <body>
-  <div class="globo-container">
-  </div>
+<div class="loading"></div>
+<audio class="song" controls loop>
+    
+    Your browser isn't invited for super fun audio time.
+</audio>
+<audio class="song1" controls loop>
+    <source src="./cancion1.mp3">
+    Your browser isn't invited for super fun audio time.
+</audio>
+<div class="balloons text-center" id="b1">
+    <h2>T</h2>
+</div>
+<div class="balloons text-center" id="b2">
+    <h2>E</h2>
+</div>
+<div class="balloons text-center" id="b3">
+    <h2 style="color:#D14D39;"> </h2>
+</div>
+<div class="balloons text-center" id="b4">
+    <h2 style="color:#8FAD00;">A</h2>
+</div>
+<div class="balloons text-center" id="b5">
+    <h2 style="color:#8377E4;">M</h2>
+</div>
+<div class="balloons text-center" id="b6">
+    <h2 style="color:#99C96A;">O</h2>
+</div>
+<div class="balloons text-center" id="b7">
+    <h2><img class="jpg" src="./JM.jpeg"></h2>
+</div>
 
-  <div class="globo-container-2">
-  </div>
+<img src="./Balloon-Border.png" width="95%" class="balloon-border">
 
-  <div class="globo-container-3">
-  </div>
-
-    <div class="container">
-      <h2>
-        <span class="libre-baskerville">Feliz cumpleaños</span>
-        <br>
-        <br>
-        IVANA
-      </h2>
+<div class="container">
+    <div class="row">
+        <div class="col-md-2 col-xs-2 bulb-holder">
+            <div class="bulb" id="bulb_yellow"></div>
+        </div>
+        <div class="col-md-2 col-xs-2 bulb-holder">
+            <div class="bulb" id="bulb_red"></div>
+        </div>
+        <div class="col-md-2 col-xs-2 bulb-holder">
+            <div class="bulb" id="bulb_blue"></div>
+        </div>
+        <div class="col-md-2 col-xs-2 bulb-holder">
+            <div class="bulb" id="bulb_green"></div>
+        </div>
+        <div class="col-md-2 col-xs-2 bulb-holder">
+            <div class="bulb" id="bulb_pink"></div>
+        </div>
+        <div class="col-md-2 col-xs-2 bulb-holder">
+            <div class="bulb" id="bulb_orange"></div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12 text-center">
+            <img src="banner.png" class="bannar">
+        </div>
     </div>
 
-      
+    <div class="row cake-cover">
+        <div class="col-md-12 texr-center">
+            <div class="cake">
+                <div class="velas">
+                    <div class="fuego"></div>
+                    <div class="fuego"></div>
+                    <div class="fuego"></div>
+                    <div class="fuego"></div>
+                    <div class="fuego"></div>
+                </div>
+                <div class="cobertura"></div>
+                <div class="bizcocho"></div>
+            </div>
+        </div>
+    </div>
 
-
-
-  <script src="anime.min.js"></script>
-  <script src="cumple.js"></script>
-  <script src="cumple2.js"></script>
-  <script src="cumple3.js"></script>
+    <div class="row message">
+        <div class="col-md-12">
+            <p>Hola mi amor</p>
+            <p>Este mensaje</p>
+            <p>te lo dedico</p>
+            <p> de corazon</p>
+            <p>Romina...</p>
+            <p>Tu eres la primera persona</p>
+            <p>con la que de verdad conecto</p>
+            <p>la unica persona con la que</p>
+            <p>de verdad me veo en un futuro</p>
+            <p>La chica con la que puedo ser yo</p>
+            <p>hoy es el cumpleaños</p>
+            <p>de esa persona taan</p>
+            <p>ESPECIAL</p>
+            <p>MAGNIFICA</p>
+            <p>PRECIOSA</p>
+            <p>INTELIGENTE</p>
+            <p> y sobre todo</p>
+            <p>EXCELENTE PERSONA</p>
+            <p>gracias por llegar</p>
+            <p>a mi vida</p>
+            <p>te amo mucho</p>
+            <p>eres un ejemplo de mujer</p>
+            <p>FELIZ CUMPLEAÑOS</p>
+            <p>ROMINA</p>
+        </div>
+    </div>
+    <div class="navbar navbar-fixed-bottom">
+        <div class="row">
+            <div class="col-md-6 text-center col-md-offset-3">
+                <button class="btn btn-primary" id="turn_on">HOLA ROMINA</button>
+                <button class="btn btn-primary" id="play">Bienvenida</button>
+                <button class="btn btn-primary" id="play2">Pongamos un poco de musica no?</button>
+                <button class="btn btn-primary" id="bannar_coming">Me dijeron que hoy es un dia especial</button>
+                <button class="btn btn-primary" id="balloons_flying">Felicidades</button>
+                <button class="btn btn-primary" id="cake_fadein">Te amo preciosa</button>
+                <button class="btn btn-primary" id="light_candle">Me pone sentimental saber que un di como hoy nacio el amor de mi vida</button>
+                <button class="btn btn-primary" id="wish_message">y tal vez te lo dije muchas veces pero..</button>
+                <button class="btn btn-primary" id="story">y te dedico estas palabras</button>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
+<script src="https://cdn.bootcss.com/jquery/1.11.2/jquery.min.js"></script>
+<script src="https://cdn.bootcss.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+<script src="effect.js"></script>
+<script>
+    (function (i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r;
+        i[r] = i[r] || function () {
+            (i[r].q = i[r].q || []).push(arguments)
+        }, i[r].l = 1 * new Date();
+        a = s.createElement(o),
+            m = s.getElementsByTagName(o)[0];
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', 'https://cdn.bootcss.com/analytics.js/2.9.1/analytics.js', 'ga');
+
+    ga('create', 'UA-58229732-1', 'auto');
+    ga('send', 'pageview');
+</script>
 </html>
 
